<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Airhorndroid</string>

	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="channel">Channel</string>
	<string name="channels">Channels</string>
	<string name="guilds">Guilds</string>
	<string name="name">Name</string>
	<string name="key">Key</string>
	<string name="save">Save</string>
	<string name="login">Login</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="credentials">Credentials</string>
	<string name="settings">Settings</string>
	<string name="connectionSuccess">Successfully connected !</string>
	<string name="ok">Ok</string>
	<string name="keepAwake">Keep the screen on</string>
</resources>
