<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_vertical|center_horizontal">

	<TextView
		android:layout_width="250dp"
		android:textSize="20dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="10dp"
		android:gravity="center_horizontal"
		android:id="@+id/credentialsTitle"
		android:text="@string/credentials" />

	<EditText
		android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:id="@+id/emailField"
		android:maxLines="1"
		android:focusable="true"
		android:inputType="textEmailAddress"
		android:layout_gravity="center_vertical|center_horizontal"
		android:hint="@string/email" />

	<EditText
		android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:id="@+id/passwordField"
		android:maxLines="1"
		android:focusable="true"
		android:inputType="textPassword"
		android:layout_gravity="center_vertical|center_horizontal"
		android:layout_marginBottom="30dp"
		android:fontFamily="sans-serif"
		android:hint="@string/password" />

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:id="@+id/login"
		android:layout_gravity="center_vertical|center_horizontal"/>
</LinearLayout>
