<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_vertical|center_horizontal">

	<EditText
		android:layout_width="240dp"
		android:layout_height="match_parent"
		android:id="@+id/channelNameField"
		android:maxLines="1"
		android:inputType="text"
		android:layout_gravity="center_vertical|center_horizontal"
		android:layout_marginBottom="20dp"
		android:hint="@string/name" />

	<EditText
		android:layout_width="240dp"
		android:layout_height="wrap_content"
		android:id="@+id/channelKeyField"
		android:maxLines="1"
		android:focusable="true"
		android:inputType="text"
		android:layout_gravity="center_vertical|center_horizontal"
		android:hint="@string/key" />

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/add"
		android:id="@+id/save"
		android:layout_gravity="center_vertical|center_horizontal"/>
</LinearLayout>
